# python-django

./: .env.template  Dockerfile  devices.csv  docker-compose.yaml  products-export (1).csv  pyproject.toml  requirements.txt
M_10_Testing/mysite/: shopapp-fixtures.json
M_10_Testing/mysite/myauth/: tests.py  urls.py  views.py
mysite/: auth_fixtures.json  auth_group_fixtures.json  auth_user_fixtures.json  log.log.3  log.txt  requirements.txt
mysite/blogapp/: admin.py  apps.py  models.py  sitemap.py  urls.py  views.py
mysite/blogapp/migrations/: 0001_initial.py  0002_alter_article_content_alter_article_pub_date.py
mysite/myapiapp/: serializers.py  urls.py  views.py
mysite/myauth/: forms.py  models.py  tests.py  urls.py  views.py
mysite/myauth/migrations/: 0001_initial.py  0002_profile_avatar.py  0003_alter_profile_avatar.py
mysite/mysite/: settings.py  sitemaps.py  urls.py
mysite/requestdataapp/: forms.py  middlewares.py  urls.py  views.py
mysite/shopapp/: admin.py  admin_mixins.py  common.py  forms.py  models.py  serializers.py  shopapp.product-export (1).csv  sitemap.py  tests.py  urls.py  views.py
mysite/shopapp/fixtures/: fixtures-for-orders-export.json  fixtures-group.json  fixtures-orders.json  fixtures-product.json  fixtures-shopapp.json  fixtures-users.json
mysite/shopapp/migrations/: 0001_initial.py  0002_product_created_at_product_discount_product_price.py  0003_product_archieved.py  0004_order.py  0005_order_user.py  0006_order_products.py  0007_alter_product_options_product_created_by.py  0008_alter_product_created_by.py  (+8 more)
(+35 files in other folders)
