[tool.poetry]
name = "python-django"
version = "0.1.0"
description = ""
authors = ["Sergey Lebedev <sergeylebedev87@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
django = "4.2.0"
django-rest-framework = "^0.1.0"
djangorestframework = "^3.14.0"
django-debug-toolbar = "^4.2.0"
django-filter = "^23.2"
gunicorn = "^21.2.0"
sqlparse = "^0.4.4"
Pillow = "^10.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
